Stop wireframe logo from clipping text in front

--- a/app/styles/pages/index.less
+++ b/app/styles/pages/index.less
@@ -20,7 +20,7 @@
         transform-style: preserve-3d;
         transform-origin: center center; 
         backface-visibility: visible;
-        transform: rotateX( 0deg );
+        transform: rotateX( 0deg ) translateZ(-100px);
         transition: transform 50ms ease;
         width: 100%;
     }
@@ -36,7 +36,6 @@
                      0 0 24px rgba(0, 0, 0, .5);
         text-transform: uppercase;
         top: 45%;
-        white-space: wrap;
     }
 
     &__links {
